# terminalMario

./: CMakeLists.txt  README.md
cpp/: enemyFx.cpp  game.cpp  game.h  main.cpp  marioFx.cpp  marioFx.h
